--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,32 @@
-# maven #
-target
+# directory names starting and ending with / will be excluded from root IDEA module
+# directory names ending with / will be excluded from all IDEA modules (see ide.gradle)
 
-logs
+# Gradle
+.gradle/
+build/
 
-# windows #
-Thumbs.db
+# Maven
+target/
+log2/
 
-# Mac #
-.DS_Store
+# IDEA
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
 
-# Log
-logs/*.html
-logs/*.log
-
-# eclipse #
-.settings
+# Eclipse
 .project
 .classpath
-.log
-*.class
+.settings/
+bin/
 
-# idea #
-.idea
-*.iml
+# Grails
+stacktrace.log
 
-# Package Files #
-*.jar
-*.war
-*.ear
-/target
+# Documentation
+/docs/_build/
 
-.flattened-pom.xml
-.flattened-build.xml
-
+# Mac
+.DS_Store
