--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>event-driven</module>
         <module>scheduler-quartz</module>
+        <module>spock-test</module>
     </modules>
 
     <name>think-in-springboot</name>
@@ -22,6 +23,8 @@
         <maven.compiler.target>8</maven.compiler.target>
 
         <spring-boot.version>2.6.2</spring-boot.version>
+        <spock.version>2.1-M2-groovy-3.0</spock.version>
+        <groovy.version>3.0.9</groovy.version>
     </properties>
 
     <dependencyManagement>
@@ -32,6 +35,40 @@
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.spockframework</groupId>
+                <artifactId>spock-bom</artifactId>
+                <version>${spock.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-bom</artifactId>
+                <version>${groovy.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>1.11.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.objenesis</groupId>
+                <artifactId>objenesis</artifactId>
+                <version>3.2</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hamcrest</groupId>
+                <artifactId>hamcrest-all</artifactId>
+                <version>1.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -47,6 +84,12 @@
             <id>scheduler-quartz</id>
             <modules>
                 <module>scheduler-quartz</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>spock-test</id>
+            <modules>
+                <module>spock-test</module>
             </modules>
         </profile>
     </profiles>
