--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
         <revision>0.0.1-SNAPSHOT</revision>
 
         <java.version>1.8</java.version>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
         <spring-boot.version>2.6.2</spring-boot.version>
         <spock.version>2.1-M2-groovy-3.0</spock.version>
@@ -117,6 +117,13 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M5</version>
+            </plugin>
+
         </plugins>
     </build>
 </project>
