--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,12 @@
     <artifactId>think-in-springboot</artifactId>
     <version>${revision}</version>
     <modules>
+        <module>spock-test</module>
         <module>event-driven</module>
         <module>scheduler-quartz</module>
+        <module>01-start-spring-boot</module>
+        <module>02-spring-boot-config</module>
+        <module>03-spring-boot-mybatis</module>
         <module>04-spring-boot-JdbcTemplate</module>
         <module>05-spring-boot-mybatis-MultiDataSource</module>
         <module>06-spring-boot-JdbcTemplate-MultiDatasource</module>
@@ -18,10 +22,6 @@
         <module>11-spring-boot-Shiro-Authentication</module>
         <module>12-spring-boot-Shiro-RememberMe</module>
         <module>13-spring-boot-Shiro-Authorization</module>
-        <module>spock-test</module>
-        <module>01-start-spring-boot</module>
-        <module>02-spring-boot-config</module>
-        <module>03-spring-boot-mybatis</module>
     </modules>
 
     <name>think-in-springboot</name>
@@ -146,5 +146,15 @@
             </plugin>
 
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                    <version>${spring-boot.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
