--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>14-spring-boot-Shiro-Redis</module>
         <module>15-spring-boot-Shiro-Ehcache</module>
         <module>16-spring-boot-Shiro-Thymeleaf-Tag</module>
+        <module>17-spring-boot-Shiro-Session</module>
     </modules>
 
     <name>think-in-springboot</name>
