--- a/event-driven/pom.xml
+++ b/event-driven/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>think-in-springboot</artifactId>
         <groupId>com.mawen</groupId>
-        <version>${revision}</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>event-driven</artifactId>
-    <version>${revision}</version>
+    <version>0.0.1-SNAPSHOT</version>
     <name>Event Driven</name>
     <description>Even Driven Demo</description>
 
