--- a/spock-test/pom.xml
+++ b/spock-test/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <artifactId>think-in-springboot</artifactId>
         <groupId>com.mawen</groupId>
-        <version>${revision}</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spock-test</artifactId>
-    <version>${revision}</version>
+    <version>0.0.1-SNAPSHOT</version>
     <description>基于Spock框架的测试用例</description>
 
     <properties>
