--- a/03-spring-boot-mybatis/pom.xml
+++ b/03-spring-boot-mybatis/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>think-in-springboot</artifactId>
         <groupId>com.mawen</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
