--- a/03-spring-boot-mybatis/src/main/resources/application.yml
+++ b/03-spring-boot-mybatis/src/main/resources/application.yml
@@ -1,14 +1,14 @@
 server:
-  context-path: /web
+  servlet:
+    context-path: /web
 
 spring:
   datasource:
-    druid:
-      type: com.alibaba.druid.pool.DruidDataSource
-      driver-class-name: oracle.jdbc.driver.OracleDriver
-      url: jdbc:oracle:thin:@localhost:1521:ORCL
-      username: test
-      password: 123456
-      initial-size: 5
-      min-idle: 5
+    url: jdbc:mysql://localhost:3306/demo?useSSL=false
+    username: root
+    password: admin
+
+mybatis:
+  mapper-locations:
+    - classpath:/mapper/*.xml
 
